feat(auth): adds auth middleware to protected routes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Postgres URL to connect to database with GORM. See https://gorm.io/docs/connecting_to_the_database.html 
 DB_URL=""
+
+# Redis URL address for connecting to Redis database
 REDIS_URL=""
+
+# Local port to run the server locally
 PORT=""
+
+# Must be 32 char string (you can get one with `openssl rand -base64 32`)
+COOKIE_SECRET=""
